# bitteryapp-android

./: .gitignore  .gitmodules  BUILD.gn  README.md  app-ads.txt  privacy
java/: AndroidManifest.xml  AndroidManifestPro.xml  aapt2.config  proguard.flags
java/res/drawable/: circular.xml  image.xml  progressbar.xml
java/res/layout/: activity_main.xml  bittery_hit_item.xml  bittery_key_info.xml
java/res/menu/: setup.xml
java/res/values/: channel_constants.xml  colors.xml  dimens.xml  styles.xml
java/res/values-zh-rCN/: channel_constants.xml
java/res/values-zh-rHK/: channel_constants.xml
java/src/com/github/bitteryapp/: BitteryCore.java  BitteryHit.java  BitteryHitAdapter.java  MainActivity.java
jni/: bitterycore.cc  btc_richlist.h  gen_btc_richlist_header.py
